--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,15 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+</dependencies>
+
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
